--- a/bot/src/main/resources/application.conf
+++ b/bot/src/main/resources/application.conf
@@ -2,33 +2,6 @@ hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
 }
 
-//h2mem1 = {
-//  url = "jdbc:h2:mem:test1"
-//  driver = org.h2.Driver
-//  connectionPool = disabled
-//  keepAliveConnection = true
-//}
-//
-//mydb = {
-//  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
-//  properties = {
-//    databaseName = "hopcone"
-//    user = "hopcone"
-//    password = "hopcone_pass"
-//  }
-//  numThreads = 10
-//}
-
-//hopcone_database {
-//  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
-//  properties = {
-//    databaseName = "hopcone"
-//    user = "postgres"
-//    password = "1qaz@WSX"
-//  }
-//  numThreads = 10
-//}
-
 hopcone_database {
   driver = org.postgresql.Driver
   url = "jdbc:postgresql://localhost:5433/hopcone"
@@ -38,3 +11,9 @@ hopcone_database {
   connectionTimeout = 5000
   validationTimeout = 5000
 }
+
+//slick.dbs.default.driver=slick.driver.PostgresDriver$
+slick.dbs.default.db.driver = "org.postgresql.Driver"
+slick.dbs.default.db.url = "jdbc:postgresql://localhost:5433/hopcone"
+slick.dbs.default.db.username = "postgres"
+slick.dbs.default.db.password = "1qaz@WSX"
