--- a/utils/src/test/resources/application.conf
+++ b/utils/src/test/resources/application.conf
@@ -2,7 +2,7 @@ hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
 }
 
-hopcone_database {
+hopcone_database_test {
   driver = org.postgresql.Driver
   url = "jdbc:postgresql://localhost:5433/hopcone"
   user = "postgres"
