--- a/bot/src/test/resources/application.conf
+++ b/bot/src/test/resources/application.conf
@@ -1,5 +1,7 @@
 hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
+  admins = []
+  channel = "@hctest"
 }
 
 hopcone_database_test {
