--- a/bot/src/main/resources/application.conf
+++ b/bot/src/main/resources/application.conf
@@ -2,6 +2,7 @@ hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
   admins = []
   channel = "@hctest"
+  download_dir = "./downloads"
 }
 
 hopcone_database {
