csv import export

--- a/bot/src/main/resources/application.conf
+++ b/bot/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
-  admins = []
+  admins = [
+    226110527
+  ]
   channel = "@hctest"
   download_dir = "./downloads"
 }
