--- a/bot/src/main/resources/application.conf
+++ b/bot/src/main/resources/application.conf
@@ -1,9 +1,11 @@
 hopcone.bot {
   token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
   admins = [
-    226110527
+    226110527,
+    125346700
   ]
-  channel = "@hctest"
+  channel = "-1001157864103"
+  //channel = "@hctest"
   download_dir = "./downloads"
 }
 
