save adaptive keyboards

--- a/bot/src/main/resources/application.conf
+++ b/bot/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 hopcone.bot {
-  token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
+  //token = "456292638:AAFTxLTvfktFJBxGB3IkEVU2ylCHHchpFcw"
+  //token = "520221068:AAHFeLXnQBmTETHJZWqhuuh3OTPxWxpvlIg"
   admins = [
     226110527,
     125346700
